--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 companyList.py
 __pycache__/
 test.py
+.idea/modules.xml
+.idea/code.iml
+.idea/misc.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.ipynb_checkpoints/Untitled-checkpoint.ipynb
